----------------------------------
[2010-02-16 Ver 0.66 -> 0.67]
- Added image resize option by class name
- Fixed bug about text that exists in top layer was deleted
----------------------------------
[2010-02-08 Ver 0.65 -> 0.66]
- Fixed bug that form tag is divided
----------------------------------
[2010-02-08 Ver 0.64 -> 0.65]
- Fixed some bugs with Jsphon call (thx naoto_is)
----------------------------------
[2010-02-06 Ver 0.63 -> 0.64]
- Fixed notice about return not reference value (thx plus9)
----------------------------------
[2009-12-13 Ver 0.62 -> 0.63]
- moved method 'Wizin_Filter::filterReplaceLinks()' to 'Wizin_Filter_Mobile::filterReplaceLinks()
- fixed bug about replace link filter delete current dirname when current uri is '***/dirname/' (thx uemera)
----------------------------------
[2009-12-03 Ver 0.61 -> 0.62]
- import t_komura's script 'detect_encoding_ja'. Thanks a lot for t_komura's original function !
----------------------------------
[2009-12-01 Ver 0.60 -> 0.61]
- updated ke-tai_list.csv
----------------------------------
[2009-11-30 Ver 0.59 -> 0.60]
- fixed bug about domdocument return empty when charset in meta tag and encoding are different.
----------------------------------
[2009-11-28 Ver 0.58 -> 0.59]
- modified 'Wizin_Util_Web::getFileByHttp' and 'Wizin_Util_Web::getContentsByHttp', change default value for send referer.
----------------------------------
[2009-11-28 Ver 0.57 -> 0.58]
- added logic into Wizin_Plugin_User_Mobile, check file time and download new spec file.
- modified 'Wizin_Util_Web::getFileByHttp', add flag for send referer.
----------------------------------
[2009-11-20 Ver 0.56 -> 0.57]
- replace '&' string for mobile link discovery.(thx jidaikobo)
----------------------------------
[2009-11-09 Ver 0.55 -> 0.56]
- Fixed bug about width value in spec data is empty, resize image width will be 0px.(thx pik)
----------------------------------
[2009-11-01 Ver 0.54 -> 0.55]