@@ -1,6 +1,7 @@
 ----------------------------------
 [2010-02-16 Ver 0.66 -> 0.67]
 - Added image resize option by class name
+- Added admissible byte logic into Wizin_Filter_Mobile::_partitionPage()
 - Fixed bug about text that exists in top layer was deleted
 ----------------------------------
 [2010-02-08 Ver 0.65 -> 0.66]
